argocd/media-server/plex/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-http-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Plex
    gethomepage.dev/icon: plex
    gethomepage.dev/description: "A one-stop destination to stream movies, TV shows,\
      \ and music."
    gethomepage.dev/pod-selector: app=plex
spec:
  parentRefs:
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - plex.yanello.net
  rules:
    - backendRefs:
        - name: plex
          namespace: plex
          port: 32400
