argocd/media-server/plex/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app: plex
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tautulli
            app: tautulli
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: overseerr
            app: overseerr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ombi
            app: ombi
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: maintainerr
            app: maintainerr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kometa
            app: kometa
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: wrapperr
            app: wrapperr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tracearr
            app: tracearr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: uptime-kuma
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - fromCIDR:
        - 192.168.0.0/16
        - 10.10.8.0/22
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
            - port: "3005"
              protocol: TCP
            - port: "8324"
              protocol: TCP
            - port: "32469"
              protocol: TCP
            - port: "1900"
              protocol: UDP
            - port: "5353"
              protocol: UDP
            - port: "32410"
              protocol: UDP
            - port: "32412"
              protocol: UDP
            - port: "32413"
              protocol: UDP
            - port: "32414"
              protocol: UDP
  egress:
    - toCIDR:
        - 192.168.0.0/16
        - 10.10.8.0/22
      toPorts:
        - ports:
            - port: "32410"
              protocol: UDP
            - port: "32411"
              protocol: UDP
            - port: "32412"
              protocol: UDP
            - port: "32413"
              protocol: UDP
            - port: "32414"
              protocol: UDP
            - port: "1900"
              protocol: UDP
            - port: "5353"
              protocol: UDP
            - port: "32400"
              protocol: TCP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "5351"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "1900"
              protocol: UDP
            - port: "32400"
              protocol: TCP
